# alpha-market-engine

./: .env.exmaple  .gitignore  LICENSE  README.md  docker-compose.local.yml  mise.toml
.cursor/commands/: code-review-checklist.md  create-commit-message.md  create-pr.md  security-audit.md  suggest-staging.md  update-dependabot-yml.md
.cursor/plans/: -c3b95162.plan.md  ddd構成への移行_e3d6dc23.plan.md  sqlalchemy+alembic(中央集約)_5dcd1985.plan.md
.github/: dependabot.yml  labels.json
.husky/: pre-commit
.husky/_/: husky.sh
alembic/: README.md  env.py
alembic/versions/: 001_initial_schema_ohlcv_signals.py
docs/: FastAPI設計.md  bot設計.md  coding_standards.md  実装ガイド.md
docs/architecture/: 01_architecture.md  02_collector.md  02_ws_collector_node.md  03_strategy.md  03_strategy_archi.md  03_trading_engine_archi.md  gmo_api.md  (+5 more)
prometheus/: prometheus.yml
scripts/: ack_all_pending.py  clear_redis_pending.sh  collector-build-up.sh  collector-run-test.sh  npm_crean_install.sh  update-github-labels.sh
services/strategy_module/: Dockerfile  README.md  config.py  env.example  main.py  pyproject.toml
services/strategy_module/application/interfaces/: __init__.py
services/strategy_module/application/services/: signal_publisher.py
services/strategy_module/application/usecases/: __init__.py
services/strategy_module/application/usecases/strategy/: indicator_calculator.py  main.py  ohlcv_generator.py  signal_generator.py
services/strategy_module/domain/: __init__.py
services/strategy_module/domain/models/: __init__.py
services/strategy_module/infrastructure/database/: connection.py  schema.py
services/strategy_module/infrastructure/database/repositories/: ohlcv_repository.py  signal_repository.py
services/strategy_module/infrastructure/logger/: __init__.py  db_logger.py
services/strategy_module/infrastructure/redis/: __init__.py  consumer.py  publisher.py
services/strategy_module/infrastructure/strategies/: base.py  moving_average_cross.py
services/strategy_module/shells/: start.sh
services/strategy_module/tests/integration/: __init__.py  test_indicator_calculation.py  test_signal_generation.py
shared/: __init__.py
(+140 files in other folders)
