[project]
name = "strategy-module"
version = "0.1.0"
description = "Strategy module worker for market data consumption and signal generation."
requires-python = ">=3.11"
dependencies = ["redis[hiredis]>=5.0.8", "pydantic>=2.9.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "infrastructure*", "domain*", "config", "main"]
