[project]
name = "strategy-module"
version = "0.1.0"
description = "Strategy module worker for market data consumption and signal generation."
requires-python = ">=3.14"
dependencies = [
  "redis[hiredis]>=7.1.0",
  "pydantic>=2.12.0",
  "pandas>=2.3.0",
  "numpy>=2.0.0",          # テクニカル指標計算用（pandas-ta の代替）
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "infrastructure*", "domain*", "config", "main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
